--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="col-sm-4">
       <p class="text-center"><strong>schwesta</strong></p><br>
       <a href="#schwesta-pic" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="schwesta-pic" width="255" height="255">
+        <img src="img/ezlife/ezlife.png" class="img-circle person" alt="schwesta-pic" width="255" height="255">
       </a>
       <div id="schwesta-pic" class="collapse">
           <h2>Games</h2>
@@ -108,7 +108,7 @@
     <div class="col-sm-4">
       <p class="text-center"><strong>eise</strong></p><br>
       <a href="#eise-pic" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="eise-pic" width="255" height="255">
+        <img src="img/ezlife/ezlife.png" class="img-circle person" alt="eise-pic" width="255" height="255">
       </a>
       <div id="eise-pic" class="collapse">
           <h2>Games</h2>
@@ -121,7 +121,7 @@
     <div class="col-sm-4">
       <p class="text-center"><strong>able</strong></p><br>
       <a href="#able-pic" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="able-pic" width="255" height="255">
+        <img src="img/ezlife/ezlife.png" class="img-circle person" alt="able-pic" width="255" height="255">
       </a>
       <div id="able-pic" class="collapse">
           <h2>Games</h2>
