update about change links

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           <li><a href="#twitch">TWITCH</a></li>
           <li><a href="#latest">LATEST MESSAGES</a></li>
           <li><a href="#contact">CONTACT</a></li>
+          <li><a href="#about">ABOUT</a></li>
           <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">LINKS
                   <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                  <li><a href="#">About</a></li> 
                   <li><a href="http://gitlab.ezlife.eu">Gitlab</a></li> 
                   <li><a href="http://mail.ezlife.eu">Mail</a></li>
                   <li><a href="#">Media</a></li> 
