fix header and footer add information

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
 <!-- Container - Ezlife.eu -->
 <div id="header" class="container text-center">
   <h3>EZLIFE.EU</h3>
-  <p><em>We are OP!</em></p>
-  <p>Tonight, we have a chance to say, 'Yeah, you're right. We're too wild. We're too out of control. We're too full of our own shit.' Or we have a chance to say, 'Hey, fuck you, you're wrong! Fuck you, we're right!' Because you have all made it to the dance. Cause believe me, this is the dance! Start the show!</p>
+    <p><em>Tonight, we have a chance to say, 'Yeah, you're right. We're too wild. We're too out of control. We're too full of our own shit.' Or we have a chance to say, 'Hey, fuck you, you're wrong! Fuck you, we're right!' Because you have all made it to the dance. Cause believe me, this is the dance! Start the show!</em></p>
   <br>
   <div class="row">
     <div class="col-sm-4">
@@ -100,10 +99,14 @@
       </a>
       <div id="schwesta-pic" class="collapse">
           <h2>Games</h2>
+          <p>Counterstrike GO</p>
           <p>H1Z1</p>
           <p>Overwatch</p>
           <p>Hearthstone</p>
           <p>Rocket League</p>
+          <h2>References</h2>
+          <p>Steam</p>
+          <p>Battle.net</p>
       </div>
     </div>
     <div class="col-sm-4">
@@ -113,10 +116,14 @@
       </a>
       <div id="eise-pic" class="collapse">
           <h2>Games</h2>
+          <p>Counterstrike GO</p>
           <p>H1Z1</p>
           <p>Overwatch</p>
           <p>League of Legends</p>
           <p>Rocket League</p>
+          <h2>References</h2>
+          <p>Steam</p>
+          <p>Battle.net</p>
       </div>
     </div>
     <div class="col-sm-4">
@@ -126,7 +133,10 @@
       </a>
       <div id="able-pic" class="collapse">
           <h2>Games</h2>
+          <p>Diablo III</p>
           <p>World of Warcraft</p>
+          <h2>References</h2>
+          <p>Battle.net</p>
       </div>
     </div>
   </div>
@@ -215,7 +225,8 @@
 <!-- Container - About -->
 <div id="about" class="container">
     <h3 class="text-center">About</h3>
-    <p class="text-center"><em>...</em></p>
+    <p class="text-center">8A:D0:97:D0:79:3E:43:ED:18:87:79:44:24:EA:6E:66
+        38:E5:5F:F4:DC:2C:40:C6:D6:A8:D6:02:13:2D:46:42</p>
 
 </div>
     
@@ -268,25 +279,19 @@
 $(document).ready(function(){
   // Initialize Tooltip
   $('[data-toggle="tooltip"]').tooltip(); 
-  
   // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
-
+  $(".navbar a, footer a[href='#home']").on('click', function(event) {
     // Make sure this.hash has a value before overriding default behavior
     if (this.hash !== "") {
-
       // Prevent default anchor click behavior
       event.preventDefault();
-
       // Store hash
       var hash = this.hash;
-
       // Using jQuery's animate() method to add smooth page scroll
       // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
       $('html, body').animate({
         scrollTop: $(hash).offset().top
       }, 900, function(){
-   
         // Add hash (#) to URL when done scrolling (default click behavior)
         window.location.hash = hash;
       });
