--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   </div>
 </div>
 
-<!-- Container - Latest Changes -->
+<!-- Container - Latest Messages -->
 <div id="latest" class="container">
     <h3 class="text-center">LATEST MESSAGES</h3>  
     <ul class="nav nav-tabs">
