--- a/index.html
+++ b/index.html
@@ -172,12 +172,25 @@
 <div id="latest" class="container">
     <h3 class="text-center">LATEST MESSAGES</h3>  
     <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#schwesta">schwesta</a></li>
-        <li><a data-toggle="tab" href="#eise">eise</a></li>
-        <li><a data-toggle="tab" href="#able">able</a></li>
+        <li class="active"><a data-toggle="tab" href="#ezlife">ezlife.eu</a></li>
+        <li><a data-toggle="tab" href="#wiki">wiki.ezlife.eu</a></li>
+        <li><a data-toggle="tab" href="#schwesta">[EZ]schwesta</a></li>
+        <li><a data-toggle="tab" href="#eise">[EZ]eise</a></li>
     </ul>
     <div class="tab-content">
-        <div id="schwesta" class="tab-pane fade in active">
+        <div id="ezlife" class="tab-pane fade">
+            <h2>Development</h2>
+            <div id="ezlifeRSS">
+                <script type="text/javascript">loadezlifeRSS();</script>
+            </div>
+        </div>
+        <div id="wiki" class="tab-pane fade">
+            <h2>Development</h2>
+            <div id="wikiRSS">
+                <!-- Confluence RSS here -->
+            </div>
+        </div>
+       <div id="schwesta" class="tab-pane fade in active">
             <h2>General</h2>
             <p>Today 04.12. 18h-20h MEZ H1Z1 Duo</p>
             <h2>H1Z1</h2>
@@ -186,13 +199,6 @@
         <div id="eise" class="tab-pane fade">
             <h2>Watchdogs 2</h2>
             <p>ezpz</p>
-        </div>
-        <div id="able" class="tab-pane fade">
-            <h2>Development</h2>
-            <h3>ezlife.eu</h3>
-            <div id="ezlifeRSS">
-                <script type="text/javascript">loadezlifeRSS();</script>
-            </div>
         </div>
     </div>
 </div>
