--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <li><a data-toggle="tab" href="#eise">[EZ]eise</a></li>
     </ul>
     <div class="tab-content">
-        <div id="ezlife" class="tab-pane fade">
+        <div id="ezlife" class="tab-pane fade in active">
             <h2>Development</h2>
             <div id="ezlifeRSS">
                 <script type="text/javascript">loadezlifeRSS();</script>
@@ -190,7 +190,7 @@
                 <!-- Confluence RSS here -->
             </div>
         </div>
-       <div id="schwesta" class="tab-pane fade in active">
+       <div id="schwesta" class="tab-pane fade">
             <h2>General</h2>
             <p>Today 04.12. 18h-20h MEZ H1Z1 Duo</p>
             <h2>H1Z1</h2>
