--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
         </div>
         <div id="wiki" class="tab-pane fade">
-            <h2>Development</h2>
+            <h2>News</h2>
             <div id="wikiRSS">
                 <!-- Confluence RSS here -->
             </div>
