add missing services

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">LINKS
                   <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                  <li><a href="http://gitlab.ezlife.eu">Gitlab</a></li> 
+                  <li><a href="http://cloud.ezlife.eu">Cloud</a></li>
+                  <li><a href="http://gitlab.ezlife.eu">Gitlab</a></li>
                   <li><a href="http://mail.ezlife.eu">Mail</a></li>
-                  <li><a href="#">Media</a></li> 
-                  <li><a href="http://confluence.ezlife.eu">Wiki</a></li> 
+                  <li><a href="#">Media</a></li>
+                  <li><a href="http://music.ezlife.eu">Music</a></li> 
+                  <li><a href="http://confluence.ezlife.eu">Wiki</a></li>
               </ul>
           </li>
       </ul>
