implement show only last 10 commits fixed errors

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
     <div class="tab-content">
         <div id="ezlife" class="tab-pane fade in active">
             <h2>Development</h2>
+            <p>Last 10 Commits</p>
             <div id="ezlifeRSS">
                 <script type="text/javascript">loadezlifeRSS();</script>
             </div>
