--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div class="container">
     <h3 class="text-center">TWITCH</h3>
     <p class="text-center">Livestreaming games on a high level<br> Remember to subscribe!</p>
-    <!-- asd
+    <!-- Buggy Twitch Streams
     <div class="row text-center">
       <div class="col-sm-4">
           <a class="embedly-card" href="http://twitch.tv/schwestaschwesta">schwestaschwesta - Twitch</a>
@@ -182,7 +182,7 @@
     <div class="tab-content">
         <div id="ezlife" class="tab-pane fade in active">
             <h2>Development</h2>
-            <p>Last 10 Commits</p>
+            <p><b>Last 10 Commits</b></p>
             <div id="ezlifeRSS">
                 <script type="text/javascript">loadezlifeRSS();</script>
             </div>
