update twitch streams

--- a/index.html
+++ b/index.html
@@ -151,22 +151,27 @@
   <div class="container">
     <h3 class="text-center">TWITCH</h3>
     <p class="text-center">Livestreaming games on a high level<br> Remember to subscribe!</p>
-    <!-- Buggy Twitch Streams
-    <div class="row text-center">
-      <div class="col-sm-4">
-          <a class="embedly-card" href="http://twitch.tv/schwestaschwesta">schwestaschwesta - Twitch</a>
-          <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-      </div>
-      <div class="col-sm-4">
-        <a class="embedly-card" href="http://twitch.tv/eisbert88">eise - Twitch</a>
-          <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-      </div>
-      <div class="col-sm-4">
-          <a class="embedly-card" href="http://twitch.tv/lanstyler">able - Twitch</a>
-          <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-      </div>
-    </div>
-    -->
+      <iframe 
+        src="http://player.twitch.tv/?channel=lanstyler" 
+        width="32%" 
+        frameborder="0" 
+        scrolling="no"
+        allowfullscreen="true">
+      </iframe>
+      <iframe 
+        src="http://player.twitch.tv/?channel=schwestaschwesta" 
+        width="32%" 
+        frameborder="0" 
+        scrolling="no"
+        allowfullscreen="true">
+      </iframe>
+      <iframe 
+        src="http://player.twitch.tv/?channel=eisbert88"  
+        width="32%" 
+        frameborder="0" 
+        scrolling="no"
+        allowfullscreen="true">
+      </iframe>
   </div>
 </div>
 
