update Latest Messages

--- a/index.html
+++ b/index.html
@@ -195,7 +195,14 @@
         <div id="wiki" class="tab-pane fade">
             <h2>News</h2>
             <div id="wikiRSS">
-                <!-- Confluence RSS here -->
+                <!-- Wiki RSS here -->
+            </div>
+        </div>
+        <div id="ezRunner" class="tab-pane fade">
+            <h2>Development</h2>
+            <p><b>Last 10 Commits</b></p>
+            <div id="ezRunnerRSS">
+                <!-- ezRunner RSS here -->
             </div>
         </div>
        <div id="schwesta" class="tab-pane fade">
