Bugfix Twitch.tv Player

--- a/index.html
+++ b/index.html
@@ -152,21 +152,21 @@
     <h3 class="text-center">TWITCH</h3>
     <p class="text-center">Livestreaming games on a high level<br> Remember to subscribe!</p>
       <iframe 
-        src="http://player.twitch.tv/?channel=lanstyler" 
+        src="https://player.twitch.tv/?channel=lanstyler" 
         width="32%" 
         frameborder="0" 
         scrolling="no"
         allowfullscreen="true">
       </iframe>
       <iframe 
-        src="http://player.twitch.tv/?channel=schwestaschwesta" 
+        src="https://player.twitch.tv/?channel=schwestaschwesta" 
         width="32%" 
         frameborder="0" 
         scrolling="no"
         allowfullscreen="true">
       </iframe>
       <iframe 
-        src="http://player.twitch.tv/?channel=eisbert88"  
+        src="https://player.twitch.tv/?channel=eisbert88"  
         width="32%" 
         frameborder="0" 
         scrolling="no"
