include chat link

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">LINKS
                   <span class="caret"></span></a>
               <ul class="dropdown-menu">
+                  <li><a href="http://chat.ezlife.eu">Chat</a></li>
                   <li><a href="http://cloud.ezlife.eu">Cloud</a></li>
                   <li><a href="http://gitlab.ezlife.eu">Gitlab</a></li>
                   <li><a href="http://mail.ezlife.eu">Mail</a></li>
@@ -243,7 +244,6 @@
     <h3 class="text-center">About</h3>
     <p class="text-center">8A:D0:97:D0:79:3E:43:ED:18:87:79:44:24:EA:6E:66
         38:E5:5F:F4:DC:2C:40:C6:D6:A8:D6:02:13:2D:46:42</p>
-
 </div>
     
 <!-- Modal - Impressum -->
