minor updates chat.ezlife.eu
add basic howto

--- a/content/chat/chatRegistration.html
+++ b/content/chat/chatRegistration.html
@@ -71,8 +71,8 @@
       <div class="item active">
           <img src="../../img/header.jpg" alt="header1" width="1200" height="700">
           <div class="carousel-caption">
-            <h3>ezlife</h3>
-            <p>op...</p>
+            <h3>ezchat</h3>
+            <p>stay connected</p>
           </div>      
       </div>
 
@@ -125,7 +125,31 @@
 <div class="bg-1">
   <div id="howto" class="container">
     <h3 class="text-center">HOWTO</h3>
-    <p class="text-center">YOYOYO!</p>
+    <h2 class="text-center">Download XMPP Chat Client</h2>
+    <p class="text-center">Desktop</p>
+        <div class="col-sm-4 text-center">
+        <p>[LINUX]</p>
+    </div>
+    <div class="col-sm-4 text-center">
+        <p>[Mac OS]</p>
+    </div>
+    <div class="col-sm-4 text-center">
+        <p>[WINDOWS]</p>
+    </div>
+    <p class="text-center">Mobile</p>
+    <div class="col-sm-4 text-center">
+        <p>[ANDROID]</p>
+    </div>
+    <div class="col-sm-4 text-center">
+        <p>[IPHONE]</p>
+    </div>
+    <div class="col-sm-4 text-center">
+        <p>[WINDOWS MOBILE]</p>
+    </div>
+    <h2 class="text-center">Configure Account</h2>
+      <p class="text-center"><b>User:</b> [USERNAME]</p>
+      <p class="text-center"><b>Domain:</b> chat.ezlife.eu</p>
+      <p class="text-center"><b>Password:</b> [PASSWORD]</p>
   </div>
 </div>
     
