fix latest messages bug

--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
         <li><a data-toggle="tab" href="#ezRunner">ezRunner</a></li>
     </ul>
     <div class="tab-content">
-       <div id="wiki" class="tab-pane fade">
+       <div id="wiki" class="tab-pane fade in active">
             <h2>News</h2>
             <div id="wikiRSS">
                 <!-- Wiki RSS here -->
             </div>
         </div>
-        <div id="ezlife" class="tab-pane fade in active">
+        <div id="ezlife" class="tab-pane fade">
             <h2>Development</h2>
             <p><b>Last 10 Commits</b></p>
             <div id="ezlifeRSS">
