add logos and update registration page content

--- a/content/chat/chatRegistration.html
+++ b/content/chat/chatRegistration.html
@@ -137,31 +137,61 @@
 <div class="bg-1">
   <div id="howto" class="container">
     <h3 class="text-center">HOWTO</h3>
+    <div class="row" align="center">
     <h2 class="text-center">Download XMPP Chat Client</h2>
     <p class="text-center">Desktop</p>
-        <div class="col-sm-4 text-center">
-        <p>[LINUX]</p>
+    <div class="col-sm-4">
+      <a href="#linux-logo" data-toggle="collapse">
+        <img src="../../img/logos/linux-logo.jpg" class="img-circle person" alt="linux-logo" width="255" height="255">
+      </a>
+      <div id="linux-logo" class="collapse">
+          <h2>Clients</h2>
+          <a href="https://wiki.gnome.org/Apps/Empathy"><p>Empathy</p></a>
+          <a href="http://kopete.kde.org/"><p>Kopete</p></a>
+          <a href="http://pidgin.im/"><p>Pidgin</p></a>
+          <p>...</p>
+      </div>
     </div>
-    <div class="col-sm-4 text-center">
-        <p>[Mac OS]</p>
+    <div class="col-sm-4">
+      <a href="#macos-logo" data-toggle="collapse">
+        <img src="../../img/logos/osx-logo.jpg" class="img-circle person" alt="macos-logo" width="255" height="255">
+      </a>
+      <div id="macos-logo" class="collapse">
+          <h2>Clients</h2>
+          <a href="https://adiumx.cachefly.net/Adium_1.5.10.2.dmg"><p>Adium</p></a>
+          <a href="http://www.apple.com/ios/messages/"><p>Apple Messages</p></a>
+          <a href="http://trillian.im/"><p>Trillian</p></a>
+          <p>...</p>
+      </div>
     </div>
-    <div class="col-sm-4 text-center">
-        <p>[WINDOWS]</p>
+    <div class="col-sm-4">
+      <a href="#windows-logo" data-toggle="collapse">
+        <img src="../../img/logos/windows-logo.jpg" class="img-circle person" alt="windows-logo" width="255" height="255">
+      </a>
+      <div id="windows-logo" class="collapse">
+          <h2>Clients</h2>
+          <a href="http://miranda-im.org/"><p>Miranda IM</p></a>
+          <a href="http://pidgin.im/"><p>Pidgin</p></a>
+          <a href="http://trillian.im/"><p>Trillian</p></a>
+          <p>...</p>
+      </div>
     </div>
+  </div>
+    <div class="row" align="center">
     <p class="text-center">Mobile</p>
-    <div class="col-sm-4 text-center">
-        <p>[ANDROID]</p>
+        <div class="col-sm-6 text-center">
+        <a href="https://itunes.apple.com/de/app/im+-instant-messenger/id285688934?mt=8"><img border="0" alt="appstore-logo" src="../../img/logos/appstore-logo.png" width="80%"></a>
     </div>
-    <div class="col-sm-4 text-center">
-        <p>[IPHONE]</p>
+    <div class="col-sm-6 text-center">
+        <a href="https://play.google.com/store/apps/details?id=de.shapeservices.impluslite"><img border="0" alt="playstore-logo" src="../../img/logos/playstore-logo.png" width="80%"></a>
     </div>
-    <div class="col-sm-4 text-center">
-        <p>[WINDOWS MOBILE]</p>
     </div>
-    <h2 class="text-center">Configure Account</h2>
-      <p class="text-center"><b>User:</b> [USERNAME]</p>
-      <p class="text-center"><b>Domain:</b> chat.ezlife.eu</p>
-      <p class="text-center"><b>Password:</b> [PASSWORD]</p>
+    <div class="row" align="center">
+        <h2 class="text-center">Configure Account</h2>
+        <p class="text-center"><b>User:</b> [USERNAME] <b>or </b> [USERNAME]@chat.ezlife.eu</p>
+        <p class="text-center"><b>Domain:</b> chat.ezlife.eu</p>
+        <p class="text-center"><b>Password:</b> [PASSWORD]</p>
+    </div>
   </div>
 </div>
     
