--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
 <!-- Container - Ezlife.eu -->
 <div id="header" class="container text-center">
   <h3>EZLIFE.EU</h3>
+    <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
+            <img src="img/ezlife/ezlife.png" class="img-circle person" alt="ezlife-logo">        
+        </div>
+        <div class="col-sm-4"></div>
+    </div>
     <p><em>Tonight, we have a chance to say, 'Yeah, you're right. We're too wild. We're too out of control. We're too full of our own shit.' Or we have a chance to say, 'Hey, fuck you, you're wrong! Fuck you, we're right!' Because you have all made it to the dance. Cause believe me, this is the dance! Start the show!</em></p>
 </div>
 
